@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    class com.company.Eieren {
        + Eieren()
    }
  }
  

  namespace com.company {
    class com.company.Eiwitshake {
        + Eiwitshake()
    }
  }
  

  namespace com.company {
    class com.company.Gebruiker {
        - gebruikersnaam : String
        - wachtwoord : String
        + Gebruiker()
        + login()
        + notifyNonVeganVoedingToegevoegd()
    }
  }
  

  namespace com.company {
    class com.company.Kip {
        + Kip()
    }
  }
  

  namespace com.company {
    class com.company.Klant {
        - gewicht : int
        - klantId : int
        - leeftijd : int
        - naam : String
        - vegan : boolean
        + Klant()
        + getKlantId()
        + getLeeftijd()
        + getNaam()
        + getVoedingsschema()
        + isVegan()
    }
  }
  

  namespace com.company {
    class com.company.Kwark {
        + Kwark()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  namespace com.company {
    class com.company.Menu {
        - beschikbareVoedingsmiddelen : List<Voedsel>
        - scanner : Scanner
        + Menu()
        + bekijkKlantData()
        + bekijkVoedingsschema()
        + genereerVoedingsschema()
        + printKlanten()
        + resetVoedingsschema()
        + start()
        + voegVoedselToeAanSchema()
    }
  }
  

  namespace com.company {
    class com.company.Notenmix {
        + Notenmix()
    }
  }
  

  namespace com.company {
    class com.company.RijstMetKip {
        + RijstMetKip()
    }
  }
  

  namespace com.company {
    class com.company.Sportschool {
        - klanten : List<Klant>
        + Sportschool()
        + getKlanten()
        + voegKlantToe()
        + zoekKlant()
    }
  }
  

  namespace com.company {
    class com.company.StandaardVoedingsschemaGenerator {
        # printVoedingsschema()
        # voegVoedselToeAanSchema()
    }
  }
  

  namespace com.company {
    class com.company.Steak {
        + Steak()
    }
  }
  

  namespace com.company {
    class com.company.VeganMaaltijd {
        + VeganMaaltijd()
    }
  }
  

  namespace com.company {
    class com.company.VeganVoedingsschemaGenerator {
        # printVoedingsschema()
        # voegVoedselToeAanSchema()
    }
  }
  

  namespace com.company {
    class com.company.Voedingsschema {
        - observers : List<VoedingsschemaObserver>
        - voedingsschema : List<Voedsel>
        + Voedingsschema()
        + addObserver()
        + addVoedsel()
        + clear()
        + getVoedingsschema()
        + removeObserver()
        - notifyObservers()
    }
  }
  

  namespace com.company {
    abstract class com.company.VoedingsschemaGenerator {
        + genereerVoedingsschema()
        {abstract} # printVoedingsschema()
        {abstract} # voegVoedselToeAanSchema()
    }
  }
  

  namespace com.company {
    interface com.company.VoedingsschemaObserver {
        {abstract} + notifyNonVeganVoedingToegevoegd()
    }
  }
  

  namespace com.company {
    abstract class com.company.Voedsel {
        - isVegan : boolean
        - naam : String
        + Voedsel()
        + getNaam()
        + isVegan()
    }
  }
  

  com.company.Eieren -up-|> com.company.Voedsel
  com.company.Eiwitshake -up-|> com.company.Voedsel
  com.company.Gebruiker .up.|> com.company.VoedingsschemaObserver
  com.company.Kip -up-|> com.company.Voedsel
  com.company.Klant o-- com.company.Voedingsschema : voedingsschema
  com.company.Kwark -up-|> com.company.Voedsel
  com.company.Menu o-- com.company.Sportschool : sportschool
  com.company.Notenmix -up-|> com.company.Voedsel
  com.company.RijstMetKip -up-|> com.company.Voedsel
  com.company.StandaardVoedingsschemaGenerator -up-|> com.company.VoedingsschemaGenerator
  com.company.Steak -up-|> com.company.Voedsel
  com.company.VeganMaaltijd -up-|> com.company.Voedsel
  com.company.VeganVoedingsschemaGenerator -up-|> com.company.VoedingsschemaGenerator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
